--- a/ember/package.json
+++ b/ember/package.json
@@ -20,20 +20,20 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.2",
-    "broccoli-coffee": "^0.4.1",
     "ember-bootstrap": "0.1.2",
     "ember-cli": "0.2.6",
     "ember-cli-app-version": "0.3.3",
     "ember-cli-babel": "^5.0.0",
+    "ember-cli-coffeescript": "0.11.0",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.0.0",
     "ember-cli-emblem": "0.2.7",
     "ember-cli-htmlbars": "0.7.6",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
+    "ember-cli-less": "1.3.3",
     "ember-cli-mocha": "0.7.0",
     "ember-cli-pretender": "0.3.2",
-    "ember-cli-qunit": "0.3.13",
     "ember-cli-uglify": "^1.0.1",
     "ember-data": "1.0.0-beta.18",
     "ember-disable-proxy-controllers": "^1.0.0",
