Grape API, initial API base classes, and configuration added

--- a/rails/Gemfile
+++ b/rails/Gemfile
@@ -8,6 +8,7 @@ gem 'mongoid', '~> 4.0.0'
 gem 'mongoid-grid_fs'
 gem 'yomu'
 gem "devise"
+gem "active_model_serializers"
 gem "grape"
 gem "grape-active_model_serializers"
 gem "grape-swagger-rails"
