--- a/ember/package.json
+++ b/ember/package.json
@@ -28,7 +28,7 @@
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.0.0",
     "ember-cli-emblem": "0.2.7",
-    "ember-template-compiler": "~1.3.0",
+    "ember-cli-emblem-hbs-printer": "0.2.1",
     "ember-cli-htmlbars": "0.7.6",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
@@ -36,9 +36,11 @@
     "ember-cli-mocha": "0.7.0",
     "ember-cli-pretender": "0.3.2",
     "ember-cli-uglify": "^1.0.1",
-    "ember-data": "1.0.0-beta.18",
+    "ember-data": "1.0.0-beta.19.1",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
+    "ember-template-compiler": "~1.3.0",
+    "pretender": "0.4.2",
     "should": "6.0.3"
   },
   "dependencies": {}
