added grape entity, added presenter for id, and now getting all rows

--- a/rails/Gemfile
+++ b/rails/Gemfile
@@ -10,6 +10,7 @@ gem 'yomu'
 gem "devise"
 gem "active_model_serializers"
 gem "grape"
+gem "grape-entity"
 gem "grape-active_model_serializers"
 gem "grape-swagger-rails"
 gem "rack-cors", require: "rack/cors"
