--- a/ember/package.json
+++ b/ember/package.json
@@ -36,7 +36,7 @@
     "ember-cli-mocha": "0.7.0",
     "ember-cli-pretender": "0.3.2",
     "ember-cli-uglify": "^1.0.1",
-    "ember-data": "1.0.0-beta.19.1",
+    "ember-data": "1.13.4",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
     "ember-template-compiler": "~1.3.0",
