--- a/ember/package.json
+++ b/ember/package.json
@@ -29,6 +29,7 @@
     "ember-cli-dependency-checker": "^1.0.0",
     "ember-cli-emblem": "0.2.7",
     "ember-cli-emblem-hbs-printer": "0.2.1",
+    "ember-cli-flash": "1.2.0",
     "ember-cli-htmlbars": "0.7.6",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
