remove serializer deprecations

--- a/ember/package.json
+++ b/ember/package.json
@@ -19,6 +19,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "active-model-adapter": "1.13.3",
     "broccoli-asset-rev": "^2.0.2",
     "ember-bootstrap": "^0.1.2",
     "ember-cli": "0.2.7",
