--- a/ember/package.json
+++ b/ember/package.json
@@ -38,6 +38,7 @@
     "ember-cli-mocha": "0.8.0",
     "ember-cli-pretender": "0.3.2",
     "ember-cli-uglify": "^1.0.1",
+    "ember-cli-uploader": "^0.3.8",
     "ember-data": "1.13.4",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
