--- a/ember/package.json
+++ b/ember/package.json
@@ -43,6 +43,7 @@
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
     "ember-google-map": "0.0.22",
+    "ember-idx-forms": "^0.6.0",
     "ember-template-compiler": "~1.3.0",
     "pretender": "0.4.2",
     "should": "6.0.3"
