--- a/ember/package.json
+++ b/ember/package.json
@@ -31,6 +31,7 @@
     "ember-cli-emblem": "0.2.7",
     "ember-cli-emblem-hbs-printer": "0.2.1",
     "ember-cli-flash": "1.2.0",
+    "ember-cli-form-data": "0.1.1",
     "ember-cli-htmlbars": "0.7.6",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
