--- a/ember/package.json
+++ b/ember/package.json
@@ -46,6 +46,7 @@
     "ember-google-map": "0.0.22",
     "ember-idx-forms": "^0.6.0",
     "ember-template-compiler": "~1.3.0",
+    "ember-select-list": "0.9.5",
     "pretender": "0.4.2",
     "should": "6.0.3"
   },
